Configurado rotas de navegação interna

--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -27,7 +27,7 @@
               <input type="password" class="form-control" name="confirmSenha" id="confirmSenha" />
             </div>
             <div class="mx-auto d-flex justify-content-around mt-3">
-              <button class="btn btn-outline-danger w-25">Cancelar</button>
+              <button class="btn btn-outline-danger w-25" routerLink="/entrar">Cancelar</button>
               <button type="submit" class="btn btn-outline-primary w-25">Cadastrar</button>
             </div>
           </form>         
