--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -21,7 +21,7 @@
           </form>
           <hr class="my-5">
           <p class="text-center">
-            Não tem uma conta? <a href="" class="fw-bold">Cadastre-se</a>
+            Não tem uma conta? <a routerLink="/cadastrar" class="fw-bold">Cadastre-se</a>
           </p>
         </div>
       </div>
