--- a/src/app/cadastrar/cadastrar.component.html
+++ b/src/app/cadastrar/cadastrar.component.html
@@ -8,27 +8,27 @@
           <form>
             <div class="form-group mb-3">
               <label for="nome" class="fw-bold">Nome:</label>
-              <input type="text" class="form-control" name="nome" id="nome" />
+              <input type="text" class="form-control" name="nome" id="nome" [(ngModel)]="usuario.nome" />
             </div>
             <div class="form-group mb-3">
               <label for="usuario" class="fw-bold">Usuário (email):</label>
-              <input type="text" class="form-control" name="usuario" id="usuario" />
+              <input type="text" class="form-control" name="usuario" id="usuario" [(ngModel)]="usuario.usuario" />
             </div>
             <div class="form-group mb-3">
               <label for="foto" class="fw-bold">Link da foto:</label>
-              <input type="text" class="form-control" name="foto" id="foto" />
+              <input type="text" class="form-control" name="foto" id="foto" [(ngModel)]="usuario.foto" />
             </div>
             <div class="form-group mb-3">
               <label for="senha" class="fw-bold">Senha:</label>
-              <input type="password" class="form-control" name="senha" id="senha" />
+              <input type="password" class="form-control" name="senha" id="senha" (keyup)="confirmSenha($event)" />
             </div>
             <div class="form-group mb-3">
               <label for="confirmSenha" class="fw-bold">Confirmar Senha:</label>
-              <input type="password" class="form-control" name="confirmSenha" id="confirmSenha" />
+              <input type="password" class="form-control" name="confirmSenha" id="confirmSenha" [(ngModel)]="usuario.senha" />
             </div>
             <div class="mx-auto d-flex justify-content-around mt-3">
               <button class="btn btn-outline-danger w-25" routerLink="/entrar">Cancelar</button>
-              <button type="submit" class="btn btn-outline-primary w-25">Cadastrar</button>
+              <button type="submit" class="btn btn-outline-primary w-25" (click)="cadastrar()">Cadastrar</button>
             </div>
           </form>         
         </div>
