--- a/src/app/entrar/entrar.component.html
+++ b/src/app/entrar/entrar.component.html
@@ -7,16 +7,16 @@
           <form>
             <div class="form-group">
               <label for="usuario" class="fw-bold">Usuário:</label>
-              <input class="form-control" type="text" name='usuario' id="usuario" placeholder="Seu usuário">
+              <input class="form-control" type="text" name='usuario' id="usuario" placeholder="Seu usuário" [(ngModel)]="usuarioLogin.usuario">
             </div>
   
             <div class="form-group mt-2">
               <label for="senha" class="fw-bold">Senha:</label>
-              <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
+              <input class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha" [(ngModel)]="usuarioLogin.senha">
             </div>
   
             <div class="d-flex justify-content-center">
-              <button type="submit" class="btn btn-outline-dark border-2 mt-3 w-50">Entrar</button>
+              <button type="submit" class="btn btn-outline-dark border-2 mt-3 w-50" (click)="logar()">Entrar</button>
             </div>
           </form>
           <hr class="my-5">
