Criado e configurado componente Tema

--- a/src/app/temas/temas.component.html
+++ b/src/app/temas/temas.component.html
@@ -1,1 +1,50 @@
-<p>temas works!</p>
+<div class="container-fluid bg-secondary">
+  <a routerLink="/inicio" class="text-white text-decoration-none ms-4 fs-5"><i class="fa fa-backward" aria-hidden="true"></i> Inicio</a>
+  <div class="container d-flex justify-content-center">
+    <div class="col-md-6 mt-4">
+      <h1 class='text-white text-center'>Cadastre um novo tema</h1>
+      <input type="text" name="tema" id="tema" placeholder="Digite a descrição do tema" class="form-control mt-3">
+      <div class="d-flex justify-content-around my-3">
+        <button class="w-25 btn btn-outline-light" routerLink="/inicio">Cancelar</button>
+        <button class="w-25 btn btn-light">Cadastrar</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="container d-flex justify-content-center">
+    <div class="col-md-8">
+      <h2 class="text-center my-3">Meus temas cadastrados</h2>
+      <table class="table table-striped">
+        <thead>
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">First</th>
+            <th scope="col">Last</th>
+            <th scope="col">Handle</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <th scope="row">1</th>
+            <td>Mark</td>
+            <td>Otto</td>
+            <td>@mdo</td>
+          </tr>
+          <tr>
+            <th scope="row">2</th>
+            <td>Jacob</td>
+            <td>Thornton</td>
+            <td>@fat</td>
+          </tr>
+          <tr>
+            <th scope="row">3</th>
+            <td colspan="2">Larry the Bird</td>
+            <td>@twitter</td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+  </div>
+</div>
