Get e Post de tema funcionais

--- a/src/app/temas/temas.component.html
+++ b/src/app/temas/temas.component.html
@@ -3,10 +3,16 @@
   <div class="container d-flex justify-content-center">
     <div class="col-md-6 mt-4">
       <h1 class='text-white text-center'>Cadastre um novo tema</h1>
-      <input type="text" name="tema" id="tema" placeholder="Digite a descrição do tema" class="form-control mt-3">
+      <input
+        type="text"
+        name="tema"
+        id="tema"
+        placeholder="Digite a descrição do tema"
+        class="form-control mt-3"
+        [(ngModel)]="tema.descricao">
       <div class="d-flex justify-content-around my-3">
         <button class="w-25 btn btn-outline-light" routerLink="/inicio">Cancelar</button>
-        <button class="w-25 btn btn-light">Cadastrar</button>
+        <button class="w-25 btn btn-light" (click)="cadastrarTema()">Cadastrar</button>
       </div>
     </div>
   </div>
@@ -19,29 +25,22 @@
       <table class="table table-striped">
         <thead>
           <tr>
-            <th scope="col">#</th>
-            <th scope="col">First</th>
-            <th scope="col">Last</th>
-            <th scope="col">Handle</th>
+            <th scope="col">Id</th>
+            <th scope="col">Descrição</th>
+            <th scope="col" class="text-center">Funções</th>
           </tr>
         </thead>
         <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <td>Otto</td>
-            <td>@mdo</td>
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <td>Thornton</td>
-            <td>@fat</td>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td colspan="2">Larry the Bird</td>
-            <td>@twitter</td>
+          <tr *ngFor="let tema of listaTemas">
+            <th scope="row">{{tema.id}}</th>
+            <td>{{tema.descricao}}</td>
+            <td>
+              <div class="d-flex justify-content-around">
+                <button class='btn btn-outline-info'>Editar</button>
+                <button class='btn btn-outline-danger'>Apagar</button>
+              </div>
+            </td>
+            
           </tr>
         </tbody>
       </table>
