Colocado if de navegação

--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -3,11 +3,13 @@
     <div class="col-md-6 d-flex flex-column align-items-center">
       <div class="col-md-8">
         <h1 class="font48 text-light text-center">Bem vindo ao blog pessoal</h1>
-        <p classs="text-light">Utilize esse espaço para escrever coisas do seu gosto</p>
+        <p class="text-white">expresse aqui os seus pensamentos e opniões!</p>
       </div>
 
       <div class="w-75 d-flex justify-content-around">
-        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#novaPostagem">Nova postagem</button>
+        <button class="btn btn-outline-light" data-bs-toggle="modal" data-bs-target="#novaPostagem">
+          Nova postagem
+        </button>
         <button class="btn btn-light">Ver postagens</button>
       </div>
     </div>
@@ -71,8 +73,8 @@
         </form>
       </div>
       <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-primary">Publicar</button>
       </div>
     </div>
   </div>
