--- a/src/app/inicio/inicio.component.html
+++ b/src/app/inicio/inicio.component.html
@@ -65,7 +65,7 @@
             <div class="card w-100">
               <div class="card-body">
                 <div class="d-flex justify-content-between align-items-center">
-                  <img src="{{usuario.foto}}" alt="" class="rounded-circle me-2" height="40">
+                  <img src="{{usuario.foto}}" alt="Foto do dono da postagem" class="rounded-circle me-2" height="40">
                   <h4>{{postagem.titulo}}</h4>
                 </div>
                 <small class="text-secondary">Tema da postagem: {{postagem.tema.descricao}}</small>
