--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -10,7 +10,7 @@
         </li>
         
         <li class="nav-item">
-          <a class="nav-link fw-bold text-white fs-5" href="#">Home</a>
+          <a class="nav-link fw-bold text-white fs-5" routerLink="/perfil">Perfil</a>
         </li>
         
         <li class="nav-item">
