Editar usuario concluido

--- a/src/app/edit/editar-postagem/editar-postagem.component.html
+++ b/src/app/edit/editar-postagem/editar-postagem.component.html
@@ -5,11 +5,13 @@
       <form>
         <div class="form-group mb-3">
           <label for="titulo">Titulo da postagem:</label>
-          <input type="text" placeholder="Digite o titulo da sua postagem" class="form-control" id="titulo" name="titulo" [(ngModel)]="postagem.titulo">
+          <input type="text" placeholder="Digite o titulo da sua postagem" class="form-control" id="titulo" name="titulo"
+          [(ngModel)]="postagem.titulo">
         </div>
         <div class="form-group mb-3">
           <label for="titulo">Texto da postagem:</label>
-          <textarea name="texto" id="texto" class="form-control" rows="5" placeholder="Digite o texto da sua postagem" [(ngModel)]="postagem.texto"></textarea>
+          <textarea name="texto" id="texto" class="form-control" rows="5" placeholder="Digite o texto da sua postagem"
+          [(ngModel)]="postagem.texto"></textarea>
         </div>
 
         <hr>
